Updated copy throughout and ordering of the provider journey

--- a/app/views/v6/provider/create/dates.html
+++ b/app/views/v6/provider/create/dates.html
@@ -83,7 +83,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-form-group {% if hasError and errorType == "dates" %}govuk-form-group--error{%endif%}">
         <fieldset class="govuk-fieldset" aria-describedby="start-hint" role="group">
           <label class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
-            When do you expect the apprentice to start?
+            Apprenticeship start date
 
           </label>
           {% if hasError and errorType == "dates" %}
@@ -137,7 +137,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
           <legend class="govuk-label govuk-!-font-weight-bold" for="shortDescription">
-            Disability Confident (optional)
+            Disability Confident employer (optional)
           </legend>
 
           <div class="govuk-checkboxes">
@@ -145,9 +145,9 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
               <input class="govuk-checkboxes__input" id="is-disability-confident" name="is-disability-confident" type="checkbox"
                 value="british" aria-describedby="is-disability-confident">
               <label class="govuk-label govuk-checkboxes__label" for="is-disability-confident">
-                This vacancy is <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
+                 This employer has signed up to the <a href="https://www.gov.uk/government/collections/disability-confident-campaign" rel="noopener"
                   target="_blank" title="Disability Confident employer scheme and guidance (opens in a new window)">Disability
-                  Confident</a>.
+                  Confident scheme</a>.
               </label>
             </div>
           </div>
