--- a/app/views/v6/provider/create/location.html
+++ b/app/views/v6/provider/create/location.html
@@ -8,7 +8,7 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form method="post">
+    <form method="post" action="task-list?section2=completed">
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
