--- a/app/views/v6/provider/create/short-description.html
+++ b/app/views/v6/provider/create/short-description.html
@@ -9,12 +9,12 @@ Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
         <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
-    <h1 class="govuk-heading-xl">Short description of the vacancy<h1>
+    <h1 class="govuk-heading-xl">Summary of the apprenticeship<h1>
     <form method="post">
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="350">
         <div class="govuk-form-group">
 
-          <p class="govuk-body">Write a few sentences about the vacancy to attract applicants. This is an important part of what applicants will see when looking through a list of vacancies, so make it stand out.</p>
+          <p class="govuk-body">Write a few sentences about the vacancy to attract applicants. This information will appear under your vacancy title when applicants look through a list of vacancies - make it stand out.</p>
           <p class="govuk-body">This could be: </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>what you are offering </li>
