--- a/app/views/v6/provider/create/about-employer.html
+++ b/app/views/v6/provider/create/about-employer.html
@@ -12,7 +12,7 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Add some information about {{data.orgName}}</h1>
+        <h1 class="govuk-heading-xl">Information about {{data.orgName}}</h1>
         <!--{% if data.EmployerDescription and data.journey != 'new' %}
         <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved vacancies eg. draft, pending review or rejected vacancies.</p>
         {%else%}
