--- a/app/views/v6/provider/create/application-process.html
+++ b/app/views/v6/provider/create/application-process.html
@@ -13,7 +13,7 @@ How would you like to receive applications? - Recruitment - {{serviceName}} - GO
           <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
           <h1 class="govuk-fieldset__heading">How would you like to receive applications?</h1>
         </legend>
-        <p class="govuk-body">We'll publish all vacancies on <a href="https://www.gov.uk/apply-apprenticeship" class="govuk-body govuk-link" rel="noopener" target="_blank">Find an apprenticeship (opens in a new tab or window)</a>.</p>
+        <p class="govuk-body">We'll publish all vacancies on <a href="https://www.gov.uk/apply-apprenticeship" class="govuk-body govuk-link" rel="noopener" target="_blank">Find an apprenticeship (opens in a new tab)</a>.</p>
         <div class="govuk-form-group">
           <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
             <div class="govuk-radios__item">
