--- a/app/views/v6/provider/create/confirmation.html
+++ b/app/views/v6/provider/create/confirmation.html
@@ -24,9 +24,9 @@ Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
     <p class="govuk-body">We’ll check the vacancy within one working day and let you know by email if you need to make any edits. <a href="../notifications/notification-preferences">Manage your emails</a>.</p>
     {% else %}
     <p class="govuk-body">
-      We’ll check the a and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
+      We’ll check the vacancy and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
     {% endif %}
-    <p class="govuk-body">When we approve your vacancy, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service</a> (opens in a new tab or window).</p>
+    <p class="govuk-body">When we approve your vacancy, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service (opens in a new tab)</a>.</p>
     <form method="post">
     <div class="form-group inline">
       <div class="form-group">
