--- a/app/views/v6/provider/create/employers-select.html
+++ b/app/views/v6/provider/create/employers-select.html
@@ -147,7 +147,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
       <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>-->
       {{ govukButton({
         text: "Save and continue",
-        href: "tp-title"
+        href: "std-select"
       }) }}      
       <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
     </form>
