--- a/app/views/v6/provider/create/positions.html
+++ b/app/views/v6/provider/create/positions.html
@@ -13,7 +13,7 @@ How many positions are there for this apprenticeship? - Recruitment - {{serviceN
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
 
-    <form method="post">
+    <form method="post" action="location">
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
