--- a/app/views/v6/provider/create/std-confirm.html
+++ b/app/views/v6/provider/create/std-confirm.html
@@ -13,7 +13,7 @@ Confirm apprenticeship training - Recruitment - {{serviceName}} - GOV.UK
 
 {% block content %}
 
-    <h1 class="govuk-heading-xl">Confirm apprenticeship training</h1>
+    <h1 class="govuk-heading-xl">Confirm apprenticeship training course</h1>
 
     <!-- <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %} vacancy</span>
     <h1 class="govuk-heading-xl">
