--- a/app/views/v6/provider/create/std-select.html
+++ b/app/views/v6/provider/create/std-select.html
@@ -16,7 +16,7 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">What training will the apprentice take?</h1>
+        <h1 class="govuk-heading-xl">What training course will the apprentice take?</h1>
         <div class="" style="display:none;">
           {% for item in data.training %}
           <span class="data-name">{{item}}</span>
@@ -26,14 +26,12 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
         <form method="post">
         <!--<form method="post" action="std-confirm">-->
           <fieldset class="govuk-fieldset">
-            <p class="govuk-body">If you have not found training for this apprenticeship, you can ​use the <a class="govuk-link" href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/" target="_blank">Find apprenticeship training service (opens in new tab or window)</a>.</p>
+           
             <div class="govuk-form-group search-field search-field-darker">
               <input type="hidden" name="clientsFilter" value="new">
               <div class="search-input ">
                 <label class="govuk-label" for="contact-by-email">
-                  <span class="govuk-hint">
-                    Enter apprenticeship training title
-                  </span>
+                  Enter training course title
                 </label>
                 <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
                   <div class="autocomplete__wrapper">
