--- a/app/views/v6/provider/create/dates.html
+++ b/app/views/v6/provider/create/dates.html
@@ -153,13 +153,10 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
           </div>
         </fieldset>
       </div>
-      {% if data.edit != "yes"%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue"/><br /><br />
-        <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-      <input type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Save and preview"/>
-      <a href="../vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <a class="govuk-link" href="../dashboard">Cancel</a>
+        </div>
       </form>
   </div>
 </div>
