--- a/app/views/v6/provider/create/things-to-consider.html
+++ b/app/views/v6/provider/create/things-to-consider.html
@@ -23,8 +23,10 @@ What else do you want the applicant to consider? (optional) - Recruitment - {{se
         </div>
       </div>
       <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and preview</button>-->
-      <button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>
-      <a href="vacnacy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+        <a class="govuk-link" href="../dashboard">Cancel</a>
+      </div>
     </form>
   </div>
 </div>
