--- a/app/views/v6/provider/create/application-process.html
+++ b/app/views/v6/provider/create/application-process.html
@@ -53,15 +53,9 @@ How would you like to receive applications? - Recruitment - {{serviceName}} - GO
           </div>
         </div>
       </fieldset>
-      <div class="govuk-form-group">
-        {% if data.edit != "yes"%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue" />
-
-        <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-        {%else%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and continue" />
-        <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-        {%endif%}
+      <div class="govuk-button-group">
+        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+        <a class="govuk-link" href="../dashboard">Cancel</a>
       </div>
     </form>
 
