--- a/app/views/v6/provider/create/duration.html
+++ b/app/views/v6/provider/create/duration.html
@@ -11,12 +11,11 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Duration and working hours</h1>
 
     <form method="post">
       <div class="govuk-form-group">
-        <br>
         <label class="govuk-label govuk-!-font-weight-bold" for="duration">
           How long is the whole apprenticeship, including work and training?
         </label>
@@ -49,15 +48,10 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
         <input class="govuk-input govuk-input--width-4" id="weekly-hours" name="weeklyHours" type="text" {% if data.weeklyHours and data.edit == "yes"%} value="{{data.weeklyHours}}" {%endif%}>
         <span class="govuk-body">hours</span>
       </div>
-      <div class="govuk-form-group">
-      {% if data.edit != "yes"%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Save and continue" />
-        <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-        <input type="submit" class="govuk-button" data-module="govuk-button" name="previewButton" value="Save and continue" /><br /><br />
-        <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
-      </div>
+      <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <a class="govuk-link" href="../dashboard">Cancel</a>
+        </div>
       </form>
   </div>
 </div>
