--- a/app/views/v6/provider/create/location.html
+++ b/app/views/v6/provider/create/location.html
@@ -62,15 +62,11 @@ Where will the apprentices work? - Recruitment - {{serviceName}} - GOV.UK
           </div>      
         </fieldset>
       </div>
-
-      {% if data.edit != "yes"%}
-      <input type="submit" class="govuk-button" name="continueButton" value="Save and continue" />
-<br /><br />
-      <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-      <input type="submit" class="govuk-button" name="previewButton" value="Save and preview" />
-      <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <a class="govuk-link" href="../dashboard">Cancel</a>
+        </div>
+        
     </form>
 
   </div>
