--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -102,9 +102,9 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
             <textarea class="govuk-textarea js-character-count {% if 'OutcomeDescription' in data.errorType %}govuk-textarea--error{% endif %}" id="OutcomeDescription" name="OutcomeDescription" rows="9" aria-describedby="more-detail-hint">{% if data['OutcomeDescription'] %}{{data['OutcomeDescription']}}{% else %}{% endif %}</textarea>
           </div>
         </div>
-        <div class="govuk-form-group">
-          <input type="submit" class="govuk-button" data-module="govuk-button" value="Save and continue" />
-          <a href="vacancy-preview" class="govuk-body das-button--link">Cancel</a>
+        <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <a class="govuk-link" href="../dashboard">Cancel</a>
         </div>
       </fieldset>
     </form>
