--- a/app/views/v6/provider/create/std-select.html
+++ b/app/views/v6/provider/create/std-select.html
@@ -53,14 +53,9 @@ What training will the apprentice take? - Recruitment - {{serviceName}} - GOV.UK
               <p class="govuk-body"><a href="#" id="clear-search" class="govuk-link">Clear search</a></p>
             </div>
           </fieldset>
-          <div class=" govuk-form-grou govuk-!-margin-top-2">
-            {% if data.edit != "yes"%}
-              <input type="submit" class="govuk-button" data-module="govuk-button" name="continueButton" value="Continue"/>
-              <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-            {%else%}
-            <input type="submit" class="govuk-button" data-module="govuk-button" name="previewdButton" value="Continue"/>
-            <a href="vacancy-preview?edit=no" class="govuk-body das-button--link">Cancel</a>
-            {%endif%}
+          <div class="govuk-button-group">
+            <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+            <a class="govuk-link" href="../dashboard">Cancel</a>
           </div>
         </form>
 
