--- a/app/views/v6/provider/create/task-list.html
+++ b/app/views/v6/provider/create/task-list.html
@@ -401,9 +401,13 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
             <span class="task-list-submit-enabled" style="display:none">
               <span class="app-task-list__task-name">
                   <!--<a href="vacancy-preview" aria-describedby="list-convictions-status">-->
-                    <a href="check-your-answers" aria-describedby="list-convictions-status">  
+                {% if data.section4 == "completed" %}
+                <a href="check-your-answers" aria-describedby="list-convictions-status">  
                   Check your answers and submit your vacancy
                 </a>
+                {%else%}
+                  Check your answers and submit your vacancy
+                {%endif%}
               </span>
               <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="submit-pay-status">Not started</strong>
             </span>
