--- a/app/views/v6/provider/create/wages.html
+++ b/app/views/v6/provider/create/wages.html
@@ -114,14 +114,10 @@ How much would you like to pay the apprentice? - Recruitment - {{serviceName}} -
           You can enter up to 250 characters
         </div>
       </div>
-
-      {% if data.edit != "yes"%}
-      <input type="submit" class="govuk-button" name="continueButton" value="Save and continue" /><br /><br />
-      <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
-      {%else%}
-      <input type="submit" class="govuk-button" name="previewButton" value="Save and preview" />
-      <a href="../vacancy-preview" class="govuk-body das-button--link">Cancel</a>
-      {%endif%}
+      <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+          <a class="govuk-link" href="../dashboard">Cancel</a>
+        </div>
     </form>
   </div>
 </div>
