--- a/app/views/v6/provider/create/task-list.html
+++ b/app/views/v6/provider/create/task-list.html
@@ -6,7 +6,14 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
 
 {% block beforeContent%}
 {{super()}}
-<a href="../dashboard" class="govuk-back-link">Return to your applications</a>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-half">
+    <a href="../dashboard" class="govuk-back-link">Return to your applications</a>
+  </div>
+  <div class="govuk-grid-column-one-half govuk-!-padding-top-2" style="text-align:right; opacity:0.3">
+    <a href="?section1=completed&&section2=completed&&section3=completed&&section4=completed" class="govuk-link">Skip</a>
+  </div>
+</div>
 {% endblock %}
 
 {% block content %}
