--- a/app/views/v6/provider/create/positions.html
+++ b/app/views/v6/provider/create/positions.html
@@ -6,6 +6,7 @@ How many positions are there for this apprenticeship? - Recruitment - {{serviceN
 
 {% block beforeContent %}
 {{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
