--- a/app/views/v6/provider/create/short-description.html
+++ b/app/views/v6/provider/create/short-description.html
@@ -4,6 +4,11 @@
 Short description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
