--- a/app/views/v6/provider/create/skills.html
+++ b/app/views/v6/provider/create/skills.html
@@ -4,10 +4,12 @@
 Manage apprentices
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
-
- 
-
 
   <div class="govuk-width-container">
 
