--- a/app/views/v6/provider/create/about-employer.html
+++ b/app/views/v6/provider/create/about-employer.html
@@ -4,12 +4,14 @@
 Add some information - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-width-container">
-
-  <main class="govuk-main-wrapper">
-
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Information about {{data.orgName}}</h1>
@@ -47,6 +49,5 @@ Add some information - Recruitment - {{serviceName}} - GOV.UK
       </div>
     </div>
 
-  </main>
 </div>
 {% endblock %}
