--- a/app/views/v6/provider/create/dates.html
+++ b/app/views/v6/provider/create/dates.html
@@ -6,6 +6,7 @@ Important dates - Recruitment - {{serviceName}} - GOV.UK
 
 {% block beforeContent %}
 {{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
