--- a/app/views/v6/provider/create/employer.html
+++ b/app/views/v6/provider/create/employer.html
@@ -6,6 +6,7 @@ Which employer name do you want on your vacancy? - Recruitment - {{serviceName}}
 
 {% block beforeContent %}
 {{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
