--- a/app/views/v6/provider/create/employers-select.html
+++ b/app/views/v6/provider/create/employers-select.html
@@ -6,9 +6,7 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
 
 {% block beforeContent %}
 {{super()}}
-{% if data.journey != "new" %}
-<a href="{%if data.edit != 'yes' %}create-vacancy{%else%}../vacancy-preview?edit=no{%endif%}" class="govuk-back-link">Back</a>
-{% endif %}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
 {% endblock %}
 
 {% block content %}
