--- a/app/views/v6/provider/create/qualifications.html
+++ b/app/views/v6/provider/create/qualifications.html
@@ -4,6 +4,11 @@
 What qualifications would you like the applicant to have? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
     <div class="govuk-grid-row">
