--- a/app/views/v6/provider/create/things-to-consider.html
+++ b/app/views/v6/provider/create/things-to-consider.html
@@ -4,6 +4,11 @@
 What else do you want the applicant to consider? (optional) - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
