--- a/app/views/v6/provider/create/wages.html
+++ b/app/views/v6/provider/create/wages.html
@@ -4,6 +4,11 @@
 How much would you like to pay the apprentice? - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
+{% block beforeContent %}
+{{super()}}
+<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+{% endblock %}
+
 {% block content %}
 
 <!-- {{minWage}} -->
